--- a/stylish.html
+++ b/stylish.html
@@ -13,6 +13,6 @@
 <h2>Heading 2 - 2</h2>
 <h2 class="small">Heading 2 - 3
 <span>Try me</span></h2>
-<span>Try me</span>
+<span>Try me 2</span>
 </body>
 </html>
